--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "koa": "^2.11.0",
     "koa-favicon": "^2.1.0",
     "koa-router": "^8.0.8",
+    "koa-send": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "socket.io": "^2.3.0"
   },
