--- a/config.json
+++ b/config.json
@@ -12,8 +12,9 @@
     "favicon"
   ],
 
-  "sockets": [
-    "default.socket",
-    "signal.socket"
-  ]
+  "redis": {
+    "host": "127.0.0.1",
+    "port": 6379,
+    "auth": "123456"
+  }
 }
