--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa-router": "^8.0.8",
     "koa-send": "^5.0.0",
     "koa2-cors": "^2.0.6",
+    "nanoid": "^2.1.11",
     "redis": "^3.0.2",
     "socket.io": "^2.3.0"
   },
